robot  Modifying: pl <multiplication#572817>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -62,4 +62,4 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *[[multiplier]]
 
 [[it:multiplication]]
-[[pl:Multiplication]]
+[[pl:multiplication]]
