robot  Modifying: pl <break#573299>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -278,6 +278,6 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 [[io:Break]]
 [[it:break]]
 [[hu:break]]
-[[pl:Break]]
+[[pl:break]]
 [[ru:Break]]
 [[fi:Break]]
