--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -1,19 +1,15 @@
 ==English==
 
-GCC Official site: http://gcc.gnu.org/
-
-GCC was originally an Acronym for "GNU C Compiler", now a Backronym for "GNU Compiler Collection".
-
-A collection of compilers for C, C++, Fortran etc. The compilers aim to be first and foremost standards-compliant and correct. This differs from other compilers many of which are developed by commercial companies and specialised to show off their hardware or software. Java support (GCJ) is a new and not yet robust.
-
-The Compiler that the Linux kernel is normally built with and the one that ships as standard on most GNU/Linux systems.
-
-For gcc related questions, search this [http://www.nabble.com/gcc-f1154.html GCC Forum] hosted by [http://www.nabble.com Nabble]. It archives all gcc mailing lists into a searchable forum. You can also post questions there.
-
+===Etymology===
+GCC was originally an Acronym for "GNU C Compiler", now a [[backronym]] for "GNU Compiler Collection".
 
 ==={{initialism}}===
 '''GCC'''
 
-#originally stood for "GNU C Compiler", but now stands for "GNU Compiler Collection"
+#originally stood for "[[GNU]] C [[Compiler]]", but now stands for "GNU Compiler Collection".
+A collection of [[compilers]] for C, C++, Fortran, etc. The compilers aim to be first and foremost standards-compliant and correct. This differs from other compilers many of which are developed by commercial companies and specialised to show off their hardware or software. Java support (GCJ) is a new and not yet robust.
 
-See [[Wikipedia:GNU Compiler Collection]]
+===See also===
+*[[Wikipedia:GNU Compiler Collection]]
+*GCC Official site: [http://gcc.gnu.org/]
+*For gcc related questions, search this [http://www.nabble.com/gcc-f1154.html GCC Forum] hosted by [http://www.nabble.com Nabble]. It archives all gcc mailing lists into a searchable forum. You can also post questions there.
