--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -22,7 +22,7 @@
 *Czech: [[vsadit se]]  
 *Dutch: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
 *French: [[parier]] (1)
-*German: [[wetten]] (1)
+*German: [[wetten]] (1), worauf du dich verlassen kannst (2)
 *Indonesian: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
 {{mid}}
 *Japanese: [[賭ける]] ([[かける]], kakeru) (1)
