--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -30,12 +30,7 @@
 ===Numeral===
 '''seize'''
 
-====Translations====
-*English: [[sixteen]]
-*Esperanto: [[dek-ses]]
-*German: [[sechzehn]]
-*Greek: [[deka-hexei]] (modern)
-*Portuguese: [[dezesseis]]
+#[[sixteen]]
 
 [[Category:fr:Cardinal numbers]]
 [[Category:English verbs]]
