--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -19,10 +19,26 @@
 *[[seize the day]]
 
 ====Translations====
+;grab 
+{{top}}
+*Danish: [[gribe]]
+*Dutch: [[grijpen]], [[vangen]], [[pakken]] 
+*Latin: [[capio]]
+{{mid}}
+*Swedish: [[fånga]]
+{{bottom}}
+
+;take advantage
+{{top}}
+*Danish: [[gribe]]
+*Dutch: [[grijpen]], [[aangrijpen]]
+{{mid}}
+{{bottom}}
+{{checktrans}}
 *Chinese Characters: [[揢]]
-*{{dk}}: [[gribe]] (1,2)
-*Dutch: [[grijpen]] (1,2), [[vangen]] (1), [[aangrijpen]] (2), [[pakken]] (1)
-*Latin: [[capio]] (1)
+
+
+
 ----
 
 ==French==
