--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -22,7 +22,7 @@
 *[[Catalan]]: [[]]
 *[[Dutch]]: [[aanpassing]] ''f'', [[bijregeling]] ''f''
 *[[Esperanto]]: [[]]
-*[[Finnish]]: [[]]
+*[[Finnish]]: [[säätö]], [[hienosäätö]]
 *[[French]]: [[arèglement]] ''m''
 *[[Frisian]]: [[]]
 *[[German]]: [[Anpassung]] ''f''
