--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -22,7 +22,7 @@
 *Danish: [[reklame]]
 *Dutch: [[advertentie]] ''f''
 *Estonian: [[reklaam]],[[propaganda]],[[kuulutus]]
-*Finnish: [[mainos]]
+*Finnish: [[mainos]], [[mainostus]]
 *French: [[publicité]] ''f'', [[pub]] ''f'', [[annonce]] ''f''
 *[[Frisian]]: [[advertinsje]], [[oankundiging]]
 *German: [[Anzeige]] ''f'', [[Werbung]] ''f'', [[Annonce]] ''f'', [[Reklameanzeige]]
