--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -1,8 +1,8 @@
-==Flemish==
+==Dutch==
 ===Interjection===
 '''amai'''
 
-# Exclamation of surprise or disappointment; [[boy]]!
+# (Flemish) Exclamation of surprise or disappointment; [[boy]]!
 
 ----
 
