--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -1,7 +1,8 @@
-==Flemish==
+==Dutch==
 ===Etymology===
 From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire.  [http://www.trabel.com/mechelen-intro.htm] 
 
 ===Proper noun===
 '''Maneblusser''' (''plural:'' [[Maneblussers]])
-#(''jocular'') An inhabitant of the city of [[Mechelen]], [[Belgium]].
+
+#(''jocular, Flemish'') An inhabitant of the city of [[Mechelen]], [[Belgium]].
