/* =Derived terms */ <bound#596320>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -33,7 +33,7 @@
 #: ''Nebraska, Missouri, Oklahoma and Colorado bound Kansas.''
 *'''Usage notes:''' Tends to be used in passive voice, as ''Kansas is bounded by Nebraska on the north, Missouri on the east ...''.
 
-====Derived terms===
+====Derived terms====
 *[[unbounded]]
 *[[boundless]]
 
