--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -1,14 +1,15 @@
 ==English==
+
 ===Etymology===
 Latin [[multi]] + [[colour]]
 
-===Alternate spellings===
+===Alternative spellings===
 *(''Chiefly American'') [[multicolor]]
 
 ===Adjective===
 '''multicolour'''
 
-#(''Chiefly Canadian, Australian, Jamaican, British, International'') Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
+# (''Chiefly Canadian, Australian, Jamaican, British, International'') Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
 
 ====Translations====
 *Dutch: [[bont]], [[bonte]], [[veelkleurig]], [[veelkleurige]]
