--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -10,6 +10,7 @@
 #an object used to make something heavier.
 #[[mass]] ([[net weight]], [[atomic weight]], [[molecular weight]], [[troy weight]], [[carat weight]], etc.)
 #a variable which multiplies a value for ease of statistical manipulation.
+#{{topology}} the smallest cardinality of base
 
 :''Compare to'' [[mass]].
 
