/* Noun */ of base -> of a base <weight#603003>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -10,7 +10,7 @@
 #an object used to make something heavier.
 #[[mass]] ([[net weight]], [[atomic weight]], [[molecular weight]], [[troy weight]], [[carat weight]], etc.)
 #a variable which multiplies a value for ease of statistical manipulation.
-#{{topology}} the smallest cardinality of base
+#{{topology}} the smallest cardinality of a base
 
 :''Compare to'' [[mass]].
 
