--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -31,7 +31,7 @@
 *[[Frisian]]: [[iikhoarntsje]]
 *[[Friulian]]: [[sghirat]], [[sghirate]]
 *[[Gallegan]]: [[esquío]]
-*German: [[Hörnchen]] ''n''
+*German: [[Eichh&ouml;rnchen]] ''n'', [[Hörnchen]] ''n''
 *Greek: [[σκίουρος]] '' ''
 *Hebrew: [[סנאי]] ''m''
 *Hungarian: [[mókus]]
