+{{gender}}, +===Hdr===, why is this a verb formation - it seems to be an adjective first and foremost, right? <multicolor#603643>

--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -1,25 +1,23 @@
+==English==
+
 ===Pronunciation===
-
 '''mul*ti-co*lor'''
-*[[IPA]]: //
-*[[SAMPA]]: //
+
 MOHL-tee-koh/kuh-luhr
+
 ===Etymology===
-
 Latin [[multi]] + [[color]]
-===Variant===
 
-(''Chiefly Canadian, Australian, Jamaican, British, International'')
-[[multicolour]]
+===Alternative spellings===
+* (''Chiefly Canadian, Australian, Jamaican, British, International'') [[multicolour]]
+
 ===Adjective===
-'''multicolor'''
-
-(''Chiefly American'')
-mul*ti-co*lored '''p.p''', mul*ti-co*lo-ring
-#Having, resembling, or pertaining to many or a world of colors.
+'''multicolor'''  (''Chiefly American'')
+<!-- mul*ti-co*lored '''p.p''', mul*ti-co*lo-ring -->
+# Having, resembling, or pertaining to many or a world of colors.
 
 ====Translations====
-*Bulgarian: [[многоцветен]] ''m''
+*Bulgarian: [[многоцветен]] {{m}}
 *Dutch: [[veelkleurig]], [[meerkleurig]]
 *Finnish: [[monivärinen]]
 *German: [[mehrfarbig]], [[vielfarbig]]
@@ -27,6 +25,7 @@ mul*ti-co*lored '''p.p''', mul*ti-co*lo-ring
 *Latin: multicolor
 *Portuguese: [[multicor]]
 *Romanian: [[multicolor]]
+
 ----
 
 ==Latin==
