robot  Modifying: fi <break#605330>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -280,4 +280,4 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 [[hu:break]]
 [[pl:break]]
 [[ru:Break]]
-[[fi:Break]]
+[[fi:break]]
