--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -17,7 +17,7 @@
 ===Noun===
 <b>abandono</b>
 #[[abandoning]], [[abandonment]]
-===Derivation===
+====Derivation====
 From the verb [[abandona]], to abandon.
 
 ===Related words===
