--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -26,5 +26,5 @@ Morphemes: [[abandon-]] + [[-o]](2).
 
 ===Related words===
 {|
-|[[abandona]] || [[abandon]]
+|[[abandona]] || { v } || [[abandon]]
 |}
