--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -37,6 +37,7 @@ words cant define themselfs in thier own definition
 {|
 <!--Put translations for languages from J to Z here-->
 *Russian: [[раздел]] ''m''
+*Romanian: [[diviziune]] ''f''
 |}
 |}
 
@@ -72,6 +73,7 @@ words cant define themselfs in thier own definition
 {|
 <!--Put translations for languages from J to Z here-->
 *Russian: [[деление]] ''n''
+*Romanian: [[impartire]] ''f''
 |}
 |}
 
@@ -105,6 +107,7 @@ words cant define themselfs in thier own definition
 {|
 <!--Put translations for languages from J to Z here-->
 *Russian: [[подразделение]] ''n''
+*Romanian: [[impartire]] ''f''
 |}
 |}
 
@@ -121,6 +124,7 @@ words cant define themselfs in thier own definition
 {|
 <!--Put translations for languages from J to Z here-->
 *Russian: [[отдел]] ''m''
+*Romanian: [[divizie]] ''f''
 |}
 |}
 
