--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -21,6 +21,8 @@
 =====Translations=====
 *Dutch: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
 *German: [[Schranke]] ''f'' (2)
+*Telugu: పరిధి
+
 =====Derived terms=====
 *[[boundary]]
 *[[least upper bound]]
