--- a/en/m/multibillion.34082.wikitext
+++ b/en/m/multibillion.34082.wikitext
@@ -1,47 +1,18 @@
-===[[Pronunciation]]===
+==English==
 
+===Pronunciation===
 '''mul*ti-bil*li-on'''
-*[[IPA]]: //
-*[[SAMPA]]: //
 MOHL-tee-BIL-li-uhn
-===[[Etymology]]===
-[[multi-]] + [[billion]]
-===[[]]===
-#Having more than 1,000,000,000 in the billion range.
-#In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range
-===[[Translations]]===
 
-*[[Arabic]]:
-*[[Basque]]:
-*[[Catalan]]:
-*[[Czech]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
-*[[French]]: [[multibillion]]
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: 
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
+===Etymology===
+[[multi-]] + [[billion]]
+
+===Adjective===
+'''multibillion'''
+# Having more than 2,000,000,000 in the billion range.
+# In the old numering system (''Notably British''), equivalent to more than 2,000,000,000,000 in the old billion range.
+
+===Translations===
+*French: [[multibillion]]
 *[[Italian]]: [[multibillione]]
-*[[Japanese]]:
-*[[Korean]]:
 *[[Latin]]: multibillion
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]:
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Slovene]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
