--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -1,21 +1,1 @@
-==English==
-{{Wikipedia}}
-====Etymology====
-
-From Japanese ''Ninten'', "leave luck to heaven" or "in heaven's hands", + ''dou'', a common suffix names of shops, laboratories, or companies.
-
-===Proper Noun===
-[[Category:English proper nouns]]
-'''Nintendo''' 
-#A video game company and console manufacturer based in Kyoto, Japan, originally founded in 1889 by Fusajiro Yamauchi.
-#The [[Nintendo Entertainment System]].
-#Any video game console manufactured by Nintendo.
-
-====Translations====
-'''a video game company'''
-*Japanese: [[任天堂]] (にんてんどう, ''Nintendou'')
-
-[[Category:Electronic games]]
-
-[[hu:Nintendo]]
-[[ja:任天堂]]
+SEGA HAS WHAT NINDENDON'T
