--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -36,7 +36,7 @@
 *'''Chinese''': [[兔]] (tù, baitu, bai2tu4)
 *'''Croatian''': [[kunič]]
 *'''Czech''': [[králík]]
-*'''Danish''': [[kanin]]
+*'''Danish''': [[kanin]] ''c''
 *'''Dutch''': [[konijn]] ''n''
 *'''Esperanto''': [[kuniklo]]
 *'''Estonian''': [[küülik]]
