--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -37,6 +37,7 @@
 #To produce bubbles (such in foods cooking)
 
 ====Translations====
+*Finnish: [[kuplia]], [[poreilla]]
 *Swedish: [[bubbla]]
 
 [[it:bubble]]
