--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -42,6 +42,7 @@
 *Spanish:  [[anuncio]] ''m'',  [[publicidad]] ''f'', [[reclamo]] ''m''
 *Swedish: [[annons]], [[annonsering]], [[reklam]]
 *Turkish: [[reklâm]], [[ilan]], [[duyuru]]
+*{{vi}}: [[quảng cáo]], [[giới thiệu]]
 *[[Volapük]]: [[noted]], [[reklam]], [[nunam]]
 
 [[Category:1000 English basic words]]
