minor fmt, {{gender}} <theory#615516>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
 ===Etymology===
 French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία]]''.
 
@@ -17,15 +16,15 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 # (''logic'') A [[set]] of [[axiom]]s, together with all [[statement]]s [[derivable]] from them.
 #: ''A '''theory''' is consistent if it has a model.''
 
-==== Translations to be checked====
+====Translations to be checked====
 *Chinese: [[理论]]/[[理論]] (lǐ lùn); [[论]]/[[論]] (lùn); [[学说]]/[[學説]] (xué shuō); [[道理]] (dào lǐ)
 *Dutch: [[theorie]]
 *Finnish: [[teoria]]
-*French: [[théorie]] ''f''
+*French: [[théorie]] {{f}}
 *Indonesian: [[teori]]
-*Italian: [[teoria]] ''f''
+*Italian: [[teoria]] {{f}}
 *Japanese: 1. [[理論]] (りろん, riron), [[学説]] (がくせつ, gakusetsu); 2. [[定理]] (ていり, teiri); [[推測]] (すいそく, suisok), [[見解]] (けんかい), [[意見]] (いけん)
-*Norwegian: [[teori]] ''m''
+*Norwegian: [[teori]] {{m}}
 *Swedish: [[teori]]
 
 ===Related terms===
