--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -45,12 +45,14 @@
 *Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
 *German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
 {{mid}}
+*Italian: [[scommessa]] ''f'' (1)
 *Latvian: [[likme]] ''f'' (1)
 *Swedish: [[vad#Noun|vad]] ''n'' (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
 {{bottom}}
 
 ----
+
 ==Dutch==
 ===Verb===
 '''bet'''
