--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -20,6 +20,12 @@ Via Norman French from Latin ''[[dama]]'', '''woman'''
 *[[madame]]
 *[[sir]]
 
+==Norwegian==
+===Noun===
+[[Category:Norwegian nouns]]
+{{no-noun-reg-mf|dam}}
+#[[lady]], [[woman]]
+
 [[de:Dame]]
 [[et:Dame]]
 [[fr:dame]]
