--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -210,6 +210,7 @@ Finnish: [[kaari]], [[pääjakso]]
 [[Category:1000 English basic words]]
 
 [[fr:division]]
-[[io:division]]
+[[io:Division]]
 [[it:division]]
 [[pl:division]]
+[[fi:division]]
