robot  Adding: ja <fraction#620371>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -39,4 +39,5 @@ French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''bre
 
 [[io:Fraction]]
 [[it:fraction]]
+[[ja:fraction]]
 [[sv:fraction]]
