--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -2,6 +2,9 @@
 ===Etymology===
 Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
+===Pronunciation===
+*{{audio|en-us-break.ogg|Audio (US)}}
+
 ====Verb====
 {{irregverb|'''to break'''
 *[[Pronunciation guide|AHD]]: /brāk/
