--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -41,9 +41,10 @@
 
 ===Etymology 3===
 ====Noun====
-{{sb|'''bound'''|'''[[bounds]]'''}}
+{{sb|bound|bounds}}
 # A sizeable jump.
-#: ''The deer crossed the stream in a single bound.''
+#: ''The deer crossed the stream in a single '''bound'''.''
+
 ====Verb====
 {{en-conj-reg|bound|bounds|bounded|bounding}}
 # To move by jumping
