--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -64,6 +64,7 @@
 [[Category:Polish derivations]]
 [[Category:English nouns]]
 [[Category:Slovak language]]
+[[Category:Alcoholic beverages]]
 
 [[it:vodka]]
 [[pl:vodka]]
