minor fmt, ===Hdr===, {{infl}} <abandono#623290>

--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -1,5 +1,6 @@
-== [[Interlingua]] ==
-=== Noun ===
+==[[Interlingua]]==
+===Noun===
+'''abandono'''
 # Interlingua for ''' '' [[abandonment]] '' ''', action of abandoning. 
 # state of being abandoned
 # the '''abandon''' 
@@ -7,15 +8,9 @@
 
 ----
 
-== [[Ekspreso]] ==
-=== noun ===
-# [[abandon]]
-
-----
-
 ==[[Novial]]==
 ===Noun===
-<b>abandono</b>
+'''abandono'''
 #[[abandoning]], [[abandonment]]
 ====Derivation====
 From [[abandona]], to [[abandon}}.
@@ -24,7 +19,7 @@ Root: [[abandon-]].
 
 Morphemes: [[abandon-]] + [[-o]](2).
 
-===Related words===
+===Related terms===
 {|
 |[[abandona]] || { v } || [[abandon]]
 |}
