robot  Adding: fi, gl <behold#626259>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -17,4 +17,6 @@
 *German: [[betrachten]], [[sehen]], [[schauen]]
 [[Category:English transitive verbs]]
 
+[[gl:Behold]]
 [[pt:Behold]]
+[[fi:behold]]
