--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -31,7 +31,7 @@
 *'''Belarusian''': [[трусяня]]/[[трусяне]], [[трус]]
 *'''Bosnian''': [[kunić]]
 *'''Breton''': [[konikl]]
-*'''Bulgarian''': [[заек]] ([[zaek]])
+*'''Bulgarian''': [[заек]] ([[zaek]]) [[:bg:заек|(bg)]]
 *'''Catalan''': [[conill]]
 *'''Chinese''': [[兔]] (tù, baitu, bai2tu4)
 *'''Croatian''': [[kunič]]
@@ -112,6 +112,7 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[Category:Mammals]]
 
 [[ar:Rabbit]]
+[[bg:Rabbit]]
 [[es:rabbit]]
 [[io:Rabbit]]
 [[it:rabbit]]
