--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-{{en-infl-reg-other-e|pledge|e}}
+{{en-infl-reg-other-e|pledg|e}}
 
 # To make a [[solemn]] [[promise]] (to do something).
 # To [[deposit]] something as a [[security]]; to [[pawn]].
