--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -86,6 +86,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Polish: [[w#Polish|w]]
 *Portuguese: [[a#Portuguese|a]]
 *Russian: [[в#Russian|в]] (v)
+*Slovak: [[o#Slovak|o]]
 *Spanish: [[a#Spanish|a]]
 *Swedish: [[vid]]
 *:''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
@@ -114,6 +115,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Korean: [[~에서]] (-eseo)
 *Portuguese: [[a#Portuguese|a]]
 *Russian: [[в#Russian|в]] (v), [[на]] (na)
+*Slovak: [[do#Slovak|do]]
 *Spanish: [[a#Spanish|a]]
 *Swedish: [[på]], [[mot#Swedish|mot]] 
 *:Han kastade sten mot mig = ''He threw stones at (=towards) me''
