+defns; +conjugation; fmt <bid#629489>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -4,7 +4,7 @@
 *IPA: /bɪd/
 
 ===Noun===
-'''bid'''  (''plural:'' '''[[bids]]''')
+{{en-noun|bid|bids}}
 # An [[offer]] at an [[auction]]
 # (''[[ultimate frisbee]]'') a (failed) attempt to [[receive]] or [[intercept]] a [[pass]]
 #:''Nice '''bid'''!''
@@ -24,21 +24,29 @@
 {{bottom}}
 
 ===Verb===
-{{en-infl-irreg|bid|bids|bidding|bid]] ''or'' [[bidden|bade]] ''or'' [[bid}}
-# ''(intransitive)'' to [[offer]]
-# ''(intransitive)'' (''card games'') to announce one’s goal, before starting play
-# ''(transitive)''  to [[offer]]
-# ''(transitive)''  (''card games'') to announce one’s goal, before starting play
+{{irregverb|'''to bid'''|'''[[bids]]'''|Depending on meaning either '''bid '''or''' [[bade]]'''|Depending on meaning either '''bid '''or''' [[bidden]]'''|'''[[bidding]]'''}}
+#(Past tense: '''bade''', past paritciple: '''bidden''') ''(transitive)'' to issue a [[command]]; to [[tell]]
+#:''He '''bade''' me to come in.''
+#(Past tense: '''bade''', past paritciple: '''bidden''') ''(transitive)'' to [[invite]]; to [[summon]]
+#:''She was '''bidden''' to the wedding.'''
+#(Past tense: '''bade''', past paritciple: '''bidden''') ''(transitive)'' to [[utter]] a [[greeting]] or [[salutation]]
+#:''We '''bade''' him farewell.''
+#(Past tense and past participle: '''bid''') ''(intransitive)'' to make an [[offer]] to [[pay]] or [[accept]] a certain [[price]]
+#:''Have you ever '''bid''' in an auction?''
+#(Past tense and past participle: '''bid''') ''(intransitive)'' (''card games'') to announce one’s goal, before starting play
+#(Past tense and past participle: '''bid''') ''(transitive)''  to [[offer]] as a [[price]]
+#:''She '''bid''' £2000 for the Persian carpet.''
+#(Past tense and past participle: '''bid''') ''(transitive)''  (''card games'') to announce one’s goal, before starting play
 
 =====Translations=====
-'''intransitive: to offer'''
+'''intransitive: to make an offer'''
 *Dutch: [[bieden]]
 *German: [[bieten]]
 
 '''intransitive: to announce goal'''
 *German: [[melden]], [[reizen]]
 
-'''transitive: to offer'''
+'''transitive: to offer as a price'''
 *Dutch: [[bieden]]
 *German: [[bieten]]
 
