--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -15,11 +15,28 @@
 :''Compare to'' [[mass]].
 
 ====Translations====
-*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
-*Dutch: [[gewicht]] (1,2)
+; force due to gravity
+{{top}}
+*Dutch: [[gewicht]]
+*French: [[poids]]
+*German: [[Gewicht]] {{n}}
+{{mid}}
+*Swedish: [[tyngd]] {{c}}
+{{bottom}}
+;object to make something heavier
+{{top}}
+*Dutch: [[gewicht]]
+*French: [[poids]]
+*German: [[Gewicht]] {{n}}
+{{mid}}
+*Swedish: [[vikt]] {{c}}
+{{bottom}}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+*Russian: вес (5)*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
 *Finnish: [[paino]]
-*French: [[poids]] (1,2)
-*German: [[Gewicht]]
 *Hungarian: [[tömeg]]
 * [[w:Ido|Ido]] : [[pezo]]
 *Indonesian: [[berat]]
@@ -27,18 +44,13 @@
 *Japanese: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
 *Romanian: [[greutate]] {{f}}
 *Spanish: [[peso]]
-*Swedish: [[vikt]] {{c}} (1,2,3)
-
-=====Translations to be checked=====
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
-{{checktrans}}
-*Russian: вес (5)
 
 ====Related terms====
 *[[weigh]]
 [[Category:1000 English basic words]]
 
 ===Verb===
+{{rfdef}}
 
 ====Translations====
 
