--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -8,6 +8,7 @@ GCC was originally an Acronym for "GNU C Compiler", now a [[backronym]] for "GNU
 
 #originally stood for "[[GNU]] C [[Compiler]]", but now stands for "GNU Compiler Collection".
 A collection of [[compilers]] for C, C++, Fortran, etc. The compilers aim to be first and foremost standards-compliant and correct. This differs from other compilers many of which are developed by commercial companies and specialised to show off their hardware or software. Java support (GCJ) is a new and not yet robust.
+# Gulf Cooperation Council
 
 ===See also===
 *[[Wikipedia:GNU Compiler Collection]]
