/* Transitive verb */ one sv-trans <weight#637864>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -57,6 +57,29 @@
 # to [[bias]] something; to [[slant]]
 #(''horse racing'') to [[handicap]] a [[horse]] with a specified weight
 
+====Translations====
+;add weight
+{{top}}
+{{mid}}
+{{bottom}}
+;oppress
+{{top}}
+{{mid}}
+{{bottom}}
+;in mathematics
+{{top}}
+{{mid}}
+*Swedish: [[vikta]]
+{{bottom}}
+;to bias, to slant
+{{top}}
+{{mid}}
+{{bottom}}
+;to handicap a horse
+{{top}}
+{{mid}}
+{{bottom}}
+
 {{checktrans}}
 ====Translations to be checked====
 *French: [[pondérer]]
