--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -30,6 +30,7 @@
 === Translations ===
 *[[Breton]]: [[c'hwitell]] ''f'' -où ''pl'' (1), [[c'hwitelladenn]] ''f'' -où ''pl'' (2,3)
 *[[Catalan]]: [[xiulet]] ''m''
+*[[Danish]]: [[fløjte]] ''c'' (1), [[fløjt]] ''n'' (2,3)
 *[[Dutch]]: [[fluitje]] ''n'' (1), [[fluittoon]] ''m'' (2,3)
 *[[Finnish]]: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
 *[[French]]: [[sifflet]] ''m''
