/* Derived terms */ ++ <leather#640387>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -45,6 +45,7 @@
 *[[leatherette]]
 *[[leatherhead]]
 *[[leather jacket]]
+*[[leathern]]
 *[[wash-leather]]
 
 [[Category:1000 English basic words]]
