? instead of checktrans <seize#641369>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -24,6 +24,7 @@
 ====Translations====
 ;grab 
 {{top}}
+*Chinese Characters: [[揢]] (?)
 *Danish: [[gribe]]
 *Dutch: [[grijpen]], [[vangen]], [[pakken]] 
 *Finnish: [[tarttua]]
@@ -39,8 +40,7 @@
 {{mid}}
 *Finnish: [[tarttua]] [[tilaisuus|tilaisuuteen]]
 {{bottom}}
-{{checktrans}}
-*Chinese Characters: [[揢]]
+
 
 ----
 
