--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -1,7 +1,27 @@
 ==English==
+
 ===Pronunciation===
 *IPA: /ˈbεt/
 *SAMPA: /"bEt/
+
+===Noun===
+{{en-noun-reg}}
+
+# a [[wager]].
+# a high degree of [[certainty]].
+#:''It's a good '''bet''' that it will rain tomorrow.''
+
+====Translations====
+{{top}}
+*Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
+*German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
+{{mid}}
+*Italian: [[scommessa]] ''f'' (1)
+*Latvian: [[likme]] ''f'' (1)
+*Swedish: [[vad#Noun|vad]] ''n'' (1)
+*[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
+{{bottom}}
+
 
 === Verb ===
 {{irregverb|'''to bet'''|'''[[bets]]'''|'''bet '''or''' [[betted]]'''|'''bet '''or '''[[betted]]'''|'''[[betting]]'''}}
@@ -24,24 +44,6 @@
 *Slovak: [[staviť sa]]  
 *Swedish: [[slå vad]] (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruánl tondæ]]
-{{bottom}}
-
-===Noun===
-'''bet'''
-
-# a [[wager]].
-# a high degree of [[certainty]].
-#:''It's a good '''bet''' that it will rain tomorrow.''
-
-====Translations====
-{{top}}
-*Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
-*German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
-{{mid}}
-*Italian: [[scommessa]] ''f'' (1)
-*Latvian: [[likme]] ''f'' (1)
-*Swedish: [[vad#Noun|vad]] ''n'' (1)
-*[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
 {{bottom}}
 
 ----
