--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -1,9 +1,13 @@
+==English==
 ===Etymology===
 Old French ''[[acusement]]''. See [[accuse]].
+
 ===Pronunciation===
 '''ac-cuse*ment'''
 *[[IPA]]: //
 *[[SAMPA]]: //
 ak-KEWZ-mint
+
 ===Noun===
-#''(Obsolete):'' [[Accusation]] - [[Chaucer]]
+'''accusement'''
+#{{obsolete}}: [[Accusation]] - [[Chaucer]]
