--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Pronunciation===
 IPA: [[WEAE]] /ðɛn/
+*{{audio|en-us-then.ogg|Audio (US)}}
 
 ===Homophones===
 [[than]] (distinguished in WEAE: /ðæn/)
