--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -4,8 +4,7 @@
 *[[w:AHD|AHD]]: sēz
 *[[w:IPA|IPA]]: /siːz/
 *[[w:SAMPA|SAMPA]]: /si:z/
-
-{{rfap}}
+*{{audio|en-us-seize.ogg|Audio (US)}}
 
 ====Homophones====
 *[[seas]]
