--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -7,6 +7,7 @@
 # [[Corps diplomatique]]: a decal found on automobiles to indicate diplomatic status
 # [[Creative director]]: head of the creative department (e.g. advertising agencies)
 # [[Corporate design]]: specific design features of a company, corporate identity [[CI]]
+# [[Collision detection]]: used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen
 
 ==Norwegian==
 ===Initialism noun===
