--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -2,5 +2,5 @@
 
 ===Noun===
 '''[[public]] [[school]]'''  (''plural:'' '''[[public schools]]''')
-# (''UK'') A private boarding school, particularly one that is run along traditional lines.
+# {{UK}} A private boarding school, particularly one that is run along traditional lines.
 # (''North America'') A publicly administered school.
