--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -39,13 +39,13 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *French: [[à]], [[en#French|en]]
 *German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
 *Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
-{{mid}}
 *{{io}}: [[ye]]
 *[[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
 *Irish: [[ag#Irish|ag]]
 *Italian: [[a#Italian|a]], [[in#Italian|in]]
 *Japanese: [[で]] (de), [[に]] (ni)
 *Korean: [[~에서]] (-eseo)
+{{mid}}
 *[[Persian]]: {{FAchar|[[در|دَر]]}} (dær)
 *Polish: [[przy]]
 *Portuguese: [[a#Portuguese|a]], [[em]]
@@ -56,6 +56,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *:''At the table'' = pri stole
 *:''At the top'' = na vrchu
 *Spanish: [[a#Spanish|a]], [[en#Spanish|en]]
+*Suoczil: iw
 *Swedish: [[på]], [[vid]]
 *:''At home'' = hemma
 *:''At work'' = på jobbet
@@ -78,9 +79,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
 *French: [[à]]
 *German: [[um]]
-{{mid}}
 *Hungarian: [[-kor]] ''([[temporalis case]])''
 *[[Interlingua]]: [[a#Interlingua|a]]
+{{mid}}
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni)
 *Polish: [[w#Polish|w]]
@@ -88,6 +89,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Russian: [[в#Russian|в]] (v)
 *Slovak: [[o#Slovak|o]]
 *Spanish: [[a#Spanish|a]]
+*Suoczil: ''familiar'' ej, ''polite'' ementz
 *Swedish: [[vid]]
 *:''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
 *:''At midnight'' = vid midnatt
@@ -106,9 +108,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
 *French: [[à]]
 *German: [[nach]], [[zu]]
-{{mid}}
 *Hungarian: [[-t]] (''[[accusative case]]'')
 *[[Interlingua]]: [[a#Interlingua|a]]
+{{mid}}
 *Irish: [[ag#Irish|ag]]
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni), [[を]] (o)
@@ -117,6 +119,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Russian: [[в#Russian|в]] (v), [[на]] (na)
 *Slovak: [[do#Slovak|do]]
 *Spanish: [[a#Spanish|a]]
+*Suoczil: na
 *Swedish: [[på]], [[mot#Swedish|mot]] 
 *:Han kastade sten mot mig = ''He threw stones at (=towards) me''
 *:Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
