--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -15,42 +15,45 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *[[desert island]]
 
 ====Translations====
-*Arabic: [[جزيرة|جَزِيرَة]] {{IPAchar|(ʤazíːra)}} ''f'', [[جزائر|جَزَائِر]] {{IPAchar|(ʤazáː’ir)}} ''pl''
-*Catalan: [[illa]] ''f''
+{{top}}
+*Arabic: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{Unicode|(džazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{Unicode|(džazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (džúzur) {{p}}
+*Catalan: [[illa]] {{f}}
 *Chinese: [[島]] (dǎo)
-*Czech: [[ostrov]] ''m''
+*Czech: [[ostrov]] {{m}}
 *Danish: [[ø]], (''of sand'') [[holm]], (''of rock'') [[skær]]
-*Dutch: [[eiland]] ''n'', -en ''pl''
-*Estonian: [[saar]], [[saared]] ''pl''
-*[[Faroese]]: [[oyggj]] ''f'', (small island) [[hólmur]] ''m'', (''of rock'') [[sker]] ''n''
+*Dutch: [[eiland]] {{n}}, eilanden {{p}}
+*Estonian: [[saar]], [[saared]] {{p}}
+*[[Faroese]]: [[oyggj]] {{f}}, (small island) [[hólmur]] {{m}}, (''of rock'') [[sker]] {{n}}
 *Fijian: [[yanuyanu]]
 *Finnish: [[saari]] (1), [[koroke]] (2)
-*French: [[île]] ''f'', -s ''pl''
-*German: [[Insel]] ''f'', -n ''pl''
-*Greek: [[νησί]] (nīsí) ''n'', νησιά ''pl'' ([[:el:νησί|el]])
-*Hebrew: [[אי]] (i) ''m''
+*French: [[île]] {{f}}, îles {{p}}
+*German: [[Insel]] {{f}}, Inseln {{p}}
+*Greek: [[νησί]] (nīsí) {{n}}, νησιά {{p}} ([[:el:νησί|el]])
+*Hebrew: [[אי]] (i) {{m}}
 *Ido: [[insulo]]
 *Indonesian: [[pulau]]
 *[[Interlingua]]: [[insula]]
-*{{ga}}: [[oileán]] ''m1''
-*Italian: [[isola]] ''f''
+{{mid}}
+*Irish: [[oileán]] ''m1''
+*Italian: [[isola]] {{f}}
 *Japanese: [[島]] ([[しま]], shimá)
 *Korean: [[섬]] (seom)
 *[[Kurdish]]: [[girav]], [[dûrge]]
-*Latin: [[insula]] ''f'', -ae, ''pl''
-*Latvian: [[sala]] ''f''
-*Lithuanian: [[sala]] ''f''
+*Latin: [[insula]] {{f}}, insulae {{p}}
+*Latvian: [[sala]] {{f}}
+*Lithuanian: [[sala]] {{f}}
 *Malay: [[pulau]]
 *Norwegian: [[øy]]
-*Polish: [[wyspa]] ''f''
-*Portuguese: [[ilha]] ''f'', -s ''pl''
-*Russian: [[остров]] (óstrov) ''m'', [[острова]] (ostrová) ''pl''
-*Slovak: [[ostrov]] ''m''
-*Slovenian: [[otok]] ''m''
-*Spanish: [[isla]] ''f'', -s ''pl''
-*Swedish: [[ö]] ''c''
+*Polish: [[wyspa]] {{f}}
+*Portuguese: [[ilha]] {{f}}, ilhas {{p}}
+*Russian: [[остров]] (óstrov) {{m}}, [[острова]] (ostrová) {{p}}
+*Slovak: [[ostrov]] {{m}}
+*Slovenian: [[otok]] {{m}}
+*Spanish: [[isla]] {{f}}, islas {{p}}
+*Swedish: [[ö]] {{c}}
 *[[Turkish]]: [[ada]]
 *Volapük: [[nisul]]
+{{bottom}}
 
 ===See also===
 *[[archipelago]]
