/* Proper Noun */ <Nintendo#655297>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -2,4 +2,4 @@
 ===Proper Noun===
 {{wikipedia}}
 '''Nintendo'''
-# a [[Japanese]] [[manufacturer]] of [[games console]]s etc
+# a [[Japanese]] [[manufacturer]] of [[games console]]s etc, founded in 1889.
