--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -24,6 +24,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*'''Afrikaans''': [[ratel]]
 *'''Albanian''': [[baldosa]]
 *'''Basque''': [[azkonar]]
 *'''Belarusian''': [[барсук]]
