--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -27,6 +27,7 @@
 *Italian: di [[nuovo]]
 *Japanese: [[また]] (mata), [[再び]] (ふたたび, futatabi)
 *Korean: [[다시]] (da-shi)
+*Polish: [[ponownie]], [[jeszcze raz]]
 *Spanish: [[otra vez]], [[de nuevo]]
 *Swedish: [[igen]], [[åter]], [[på nytt]]
 *Turkish: [[yeniden]], [[tekrar]], [[gene]]
