--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*SAMPA: /{d"v@(`):taIzsm@nt/
+*SAMPA: /"{dv@(`):%taIzment/
 
 ===Noun===
 '''advertisement'''  (''plural:'' '''[[advertisements]]''')
