--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -1,33 +1,35 @@
 ==English==
+
 ===Etymology===
 From French ''simple'', from Latin ''[[simplex]]''
 
 ===Adjective===
-'''simple''' (''Comparative'': [[simpler]], ''superlative'': [[simplest]])
+'''simple''' ({{compare}} [[simpler]], {{super}} [[simplest]])
 #having few parts or features; having no special features
-#''(colloquial):'' feeble-minded.
+# {{colloquial}} feeble-minded.
 
 ====Synonyms====
-*[[Plain]]
+*[[plain]]
 
 ====Antonyms====
 *[[complex]]
 *[[compound]]
 
 ====Translations====
-*[[Bulgarian]]: [[прост]] ''m'' (1,2), [[малоумен]] ''m'' (2)
+*[[Bulgarian]]: [[прост]] {{m}} (1,2), [[малоумен]] {{m}} (2)
 *Chinese: [[简单化]]
 *Esperanto: [[simpla]]
-*[[Finnish]]: [[yksinkertainen]] ([[simppeli]] (slang))
+*Finnish: [[yksinkertainen]] ([[simppeli]] {{slang}})
 *Japanese: [[簡単な]]、[[単純な]]
 *Latin: [[simplex]]
-*Russian: [[простой]] ''m''
+*Russian: [[простой]] {{m}}
 *Swedish: [[enkel]] (1,2)
 
-===Related Words===
+===Related terms===
 *[[simplex]]
 *[[simply]]
 *[[single]]
+
 ----
 
 ==French==
