--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -15,6 +15,8 @@ From Middle English, from Old English ''[[þing]]''.
 #{{law}} whatever can be [[owned]]
 # the [[latest]] [[fad]] or [[fashion]]
 #(''in plural'') [[clothes]], [[possessions]] or [[equipment]]
+# A container. 
+#:''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 
 ===Synonyms===
