--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -6,7 +6,7 @@ From Middle English, from Old English ''[[þing]]''.
 ===Pronunciation===
 *thĭng, /θɪŋ/, /TIN/
 
-===Noun===
+==Noun===
 '''thing''' (plural: [[things]]; diminutives: [[thingy]] / [[thingie]], [[thingo]] [''Aus''])
 
 # That which is considered to [[exist]] as a [[separate]] [[entity]], [[quality]] or [[concept]].
@@ -15,7 +15,7 @@ From Middle English, from Old English ''[[þing]]''.
 #{{law}} whatever can be [[owned]]
 # the [[latest]] [[fad]] or [[fashion]]
 #(''in plural'') [[clothes]], [[possessions]] or [[equipment]]
-#{{rfv}} A container. 
+#A container. 
 #:''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 
