--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -30,6 +30,7 @@ IPA: [[WEAE]] /ðɛn/
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
 *[[Kurdish]]: [[hingê]]
+*Old English: [[þa|þā]] (1,2,3,4)
 *[[Portuguese]]: [[então]]
 *[[Turkish]]: [[o zaman]]
 
