--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -12,13 +12,16 @@ kohn-SUME
 Latin [[consumere]]
 
 ===Transitive verb===
+{{en-infl-reg-other-e|consum|e}}
 
-consumed '''p.p''', [[consuming]]
-
-#To [[use]] up.  ''The power plant consumes 30 tons of coal per hour.''
-#To [[eat]].  ''Baby birds consume their own weight in food each day.''
-#To [[burn]].  ''The fire consumed thousands of acres of forest.''
-#To [[occupy]] {one's attention or thoughts). ''He was consumed with desire.''
+#To [[use]] up.
+#:''The power plant '''consumes''' 30 tons of coal per hour.''
+#To [[eat]].
+#:''Baby birds '''consume''' their own weight in food each day.''
+#To [[burn]].
+#:''The fire '''consumed''' thousands of acres of forest.''
+#To [[occupy]] (one's attention or thoughts). 
+#:''He was '''consumed''' with desire.''
 
 ===Related words===
 
