--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -61,4 +61,4 @@ A specific species is referred to by its genus and species in italics with the g
 [[de:species]]
 [[io:Species]]
 [[it:species]]
-[[nl:species]]
+[[fi:species]]
