--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -1,46 +1,17 @@
-===[[Pronunciation]]===
+==English==
 
-'''mul*ti-mil*li-on'''
-*[[IPA]]: //
-*[[SAMPA]]: //
-MOHL-tee-MIL-li-hun
-===[[Etymology]]===
+===Etymology===
 Latin [[multi]] + [[million]]
-===[[]]===
-#Having more than 1,000,000 in the million range.
-===[[Translations]]===
 
-*[[Arabic]]:
-*[[Basque]]:
-*[[Catalan]]:
-*[[Czech]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
-*[[French]]: [[multimillion]]
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: 
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
+===Noun===
+{{en-noun-reg}}
+
+# Having more than 1,000,000 in the million range.
+
+===Translations===
+{{top}}
+*French: multimillion
 *[[Italian]]: [[multimillione]]
-*[[Japanese]]:
-*[[Korean]]:
+{{mid}}
 *[[Latin]]: multimillion
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]:
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Slovene]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
+{{bottom}}
