--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -3,12 +3,14 @@
 '''amai'''
 
 # (Flemish) Exclamation of surprise or disappointment; [[boy]]!
+----
 
 ==Italian==
 ===Verb form===
 '''amai'''
 # ''first-person singular indicative past historic of [[amare]]''
-
+[[Category:Italian verb forms]]
+----
 ==Japanese==
 ===Romaji===
 {{romaji|あまい}}
