--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,6 +1,6 @@
 == [[Greek]] (ancient) ==
 
-[[IPA]] [ˈkyon] / [ˈkio̞n] / [ˈcio̞n]
+[[IPA]] [ˈkyon] / [ˈkion] / [ˈkio̞n] / [ˈcio̞n]
 
 ===Noun===
 '''κύων''' ''[[masculine|m.]]'' (''[[genitive|gen.]]'' κυνός)
