+ weightlifting & measure defs <weight#688878>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -8,6 +8,8 @@
 
 #the [[force]] on an object due to the gravitational attraction between it and the Earth.
 #an object used to make something heavier.
+#a [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
+#{{weightlifting}}: [[disc]] of [[iron]], [[dumbbell]], or [[barbell]] used for training the [[muscle]]s.
 #[[mass]] ([[net weight]], [[atomic weight]], [[molecular weight]], [[troy weight]], [[carat weight]], etc.)
 #a variable which multiplies a value for ease of statistical manipulation.
 #{{topology}} the smallest cardinality of a base
