--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -32,6 +32,7 @@
 *German: [[Gewicht]] {{n}}
 {{mid}}
 *Swedish: [[vikt]] {{c}}
+*{{uk}}: [[вага]] (wah'''a''') {{f}}
 {{bottom}}
 
 =====Translations to be checked=====
