--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -1,7 +1,14 @@
 ==Spanish==
-
+===Etymology===
+Latin ''[[parens]], parentis''
 ===Noun===
-'''pariente'''  ''m, f''
+'''pariente'''  ''m, f'' (''colloquial f'' parienta)
 # [[relative]], [[relation]]
+
+===Related terms===
+*[[parir]]
+*[[parentela]]
+*[[parentesco]]
+*[[emparentar]]
 
 [[fi:pariente]]
