corrected chamorro spelling <pig#694702>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -31,7 +31,7 @@
 *Bulgarian: [[свиня]] ([[svinja]])
 *[[Catalan]]: [[porc]] ''m'', [[truja]] ''f''
 *[[Cebuano]]: [[baboy]]
-*[[Chamorro]]: [[babue]]
+*[[Chamorro]]: [[babui]]
 *CJK Characters: [[豬]], [[猪]]; [[豚]]
 *Chinese: [[豬]], [[猪]] (zhū, zhu)
 *Croatian: [[svinja]]
