--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+*{{audio|en-us-crook.ogg|Audio (US)}}
+
 ===Noun===
 '''crook'''  (''plural:'' '''[[crooks]]''')
 # A [[criminal]] who steals.
