-Adjective (in my opinion just the noun used attributively); fmt <pig#699919>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -3,25 +3,18 @@
 *[[w:IPA|IPA]]: /pɪg/
 
 === Noun ===
-'''pig''' (''plural'' '''pigs''' or '''[[swine]]''')
-#A [[mammal]] of the genus ''[[Sus]]'', often raised on [[farm]]s for [[meat]].
+{{en-noun2|'''pig'''|'''[[pigs]] '''or''' [[swine]]'''}}
+#A [[mammal]] of the genus ''[[Sus]]'', often raised on [[farm]]s for [[meat]]. Scientific name: [[Sus scrofa]], [[Sus scrofa domesticus]].
 #A [[greedy]] person; someone who overeats or has eats rapidly and noisily.
-#A [[nasty]] or [[disgusting]] person.
-#*''[[capitalist]] pig'', ''[[male chauvinist pig]]''
+#A [[nasty]] or [[disgusting]] person; as, a ''[[capitalist]] pig'', ''[[male chauvinist pig]]''.
 #A [[dirty]] person.
-#(''derogatory slang'') A [[police]] officer.
-#A difficult problem.
+#(''derogatory slang'') A [[police officer]].
+#A [[difficult]] [[problem]].
+#When used attributively in certain [[set phrase]]s: [[imitation|Imitation]], not [[real]]; as, ''[[pig Latin]]'', ''[[pig iron]]''.
 
-====Scientific name====
-*[[Sus scrofa]], [[Sus scrofa domesticus]]
-[[Category:Pig]]
 ==== Translations ====
-
 '''mammal'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Albanian: [[derri]]
 *[[Amuzgo]]: [[kítzku]]
 *[[Basque]]: [[txerri]]
@@ -55,10 +48,7 @@
 *Italian: [[maiale]] ''m'', [[porco#Italian|porco]] ''m''
 *Japanese: [[豚]] ([[ぶた]], buta)
 *[[Ladin]]: [[porcel]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Latin: [[porcus]] <!--do not put the scientific name here-->
 *Latvian: [[cūka]] ''f''
 *Lithuanian: [[kiaulė]]
@@ -90,22 +80,14 @@
 *Ukrainian: [[свиня]] ([[svinja]])
 *[[Upper Sorbian]]: [[swinjo]]
 *Welsh: [[mochyn]]
-|}
-|}
+{{botttom}}
 
 '''greedy person'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Finnish: [[ahmatti]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Italian: [[porco]] ''m'', [[maiale]] ''m''
-|}
-|}
+{{bottom}}
 
 '''nasty person'''
 {| border=0  width=100%
@@ -143,35 +125,16 @@
 |}
 
 '''derogatory slang: police officer'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*French: [[flic]]
-*Verlan: [[ceuf]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
+{{top}}
+*French: [[flic]], [[ceuf]] (''verlan'')
+*German: [[Bulle]] {{m}}
+{{mid}}
+{{bottom}}
 
 '''difficult problem'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-=== Adjective ===
-#Used in certain [[set phrase]]s to mean [[imitation]], not real.
-#:''[[pig Latin]]''
-#:''[[pig iron]]''
+{{top}}
+{{mid}}
+{{bottom}}
 
 ===Derived terms===
 *[[piggy]]
