--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,7 @@
 === Noun ===
 {{en-noun2|'''pig'''|'''[[pigs]] '''or''' [[swine]]'''}}
 #A [[mammal]] of the genus ''[[Sus]]'', often raised on [[farm]]s for [[meat]]. Scientific name: [[Sus scrofa]], [[Sus scrofa domesticus]].
-#A [[greedy]] person; someone who overeats or has eats rapidly and noisily.
+#A [[greedy]] person; someone who overeats or eats rapidly and noisily.
 #A [[nasty]] or [[disgusting]] person; as, a ''[[capitalist]] pig'', ''[[male chauvinist pig]]''.
 #A [[dirty]] person.
 #(''derogatory slang'') A [[police officer]].
