--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -7,6 +7,6 @@
 # one of the four sections made by dividing an area with two perpendicular lines.
 
 ====Translations====
-*Dutch: [[kwadrant]]  ''n'' (1, 2, 3)
+*Dutch: [[yelly bellered cat lickin varmit]]  ''n'' (1, 2, 3)
 *{{fi}}: [[kvadrantti]] (1, 3)
 *Swedish: [[kvadrant]] ''c'' (1,3)
