--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -1,5 +1,5 @@
-==English==
-=== Noun ===
+==meheeco==
+=== verb ===
 '''quadrant''' ([[quadrants]])
 
 # an angle of 90&deg;, a quarter of a circle.
