/* Noun */ surfing/ocean term <break#702584>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -193,6 +193,9 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 #:''Let’s take a five-minute '''break'''.''
 #(''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
 #(''billiards'') The first [[shot]] in a game of [[billiards]]
+# Place where [[wave]]s break (ie. pitch or spill forward creating white water).
+#: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
+[[Category:Surfing]]
 
 =====Synonyms=====
 *(''instance of breaking something into two pieces''): [[split]]
@@ -236,6 +239,10 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{top}}
 {{mid}}
 {{bottom}}
+
+===Derived terms===
+* [[beach break]]
+* [[point break]]
 
 ====Derived terms====
 *[[breakage]]
