--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -13,34 +13,55 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *'''Homophones:''' [[brake]]
 
 ===Verb===
-{{irregverb|'''to break'''|'''[[breaks]]'''|'''[[broke]]'''|'''[[broken]]'''|'''[[breaking]]'''}}
+[[Category:English irregular verbs]]
+{{en-verb2|'''to break'''|'''[[breaks]]'''|'''[[broke]]'''|'''[[broken]]'''|'''[[breaking]]'''}}
 
-====Intransitive====
-#To [[end up]] in two or more [[piece]]s, which can't easily be [[reassembled]].
+#{{intransitive}} To [[end up]] in two or more [[piece]]s, which can't easily be [[reassembled]].
 #: ''The vase fell to the floor and '''broke''' into a thousand pieces.''
-#(''medicine'') Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
+#{{intransitive}} {{medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
 #:''My shin bone '''broke''' when I fell down stairs last week.''
-#To [[stop]] [[function]]ing [[properly]] or [[altogether]].
+#{{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
 #:''The fridge has '''broken'''.''
-#To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
+#{{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
 #:''Let's '''break''' for lunch.''
-<!--I'm not quite sure about this one. Anyone who plays tennis?
-#(''tennis'') To win a game as [[receiver]] or receivers (in case of a [[double]])-->
-#(''billiards'') To make the [[first]] [[shot]].
+#{{intransitive}} {{tennis}} To win a game as [[receiver]].
+#{{intransitive}} {{billiards}} To make the [[first]] [[shot]].
 #:''Is it your or my turn to '''break'''?''
+#{{transitive}} To [[cause]] to [[end up]] in two or more [[piece]]s.
+#: ''He '''broke''' the vase.''
+#{{transitive}} {{medicine}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
+#:''He killed him by '''breaking''' his neck.''
+#{{transitive}} {{medicine}} Of a bone, to [[fracture]] accidentially.
+#:''I broke my arm and now I have it in plaster.''
+#{{transitive}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
+#:''Did you two '''break''' the trolley by racing with it?''
+#{{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
+#:''You have to '''break''' an elephant before you can use it as an animal of burden.''
+#:'''''Breaking''' a man will make him obedient.''
+#{{transitive}} To do that which is [[forbid]]den by (a rule or rules).
+#:''Stealing is breaking the law.''
+#{{transitive}} (''gaming slang'') To [[design]] or make (a [[legal]] but [[unfair]] [[move]]).
+#: ''Letting white have three extra queens would '''break''' chess.''
+#{{transitive}} {{media}} to [[disclose]] or [[make known]] an item of [[news]] etc
 
-=====Synonyms=====
-*(''end up in two or more pieces''): [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
-*(''of a bone''): [[crack]], [[fracture]]
-*(''stop functioning''): [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
-*(''interrupt''): [[interrupt]], [[pause]]
+====Synonyms====
+*(''intransitive: end up in two or more pieces''): [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
+*(''intransitive: of a bone''): [[crack]], [[fracture]]
+*(''intransitive: stop functioning''): [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
+*(''intransitive: interrupt''): [[interrupt]], [[pause]]
+*(''transitive: cause to end up in two or more pieces''): [[shatter]], [[smash]]
+*(''transitive: of a bone, intentionally''): [[crack]], [[fracture]]
+*(''transitive: of a bone, accidentially''): [[crack]], [[fracture]]
+*(''transitive: cause to malfunction or stop working altogether''): [[bust]]
+*(''transitive: cause a person or animal to lose his/her/its will''): [[subject]], [[tame]]
+*(''transitive: do that which is forbidden by''): [[contravene]], [[go against]], [[violate]]
 
-=====Antonyms=====
-*(''interrupt''): [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
+====Antonyms====
+*(''intransitive: interrupt''): [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
+*(''transitive: cause to end up in two or more pieces''): [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
 
-=====Translations=====
-
-'''end up in two or more pieces'''
+====Translations====
+'''intransitive: end up in two or more pieces'''
 {{top}}
 *Esperanto: [[rompi]]
 *Finnish: [[hajota]]
@@ -50,7 +71,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[gå sönder]]
 {{bottom}}
 
-'''of a bone'''
+'''intransitive: of a bone'''
 {{top}}
 *Esperanto: [[panei]]
 *German: [[brechen]]
@@ -59,7 +80,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[brytas]]
 {{bottom}}
 
-'''stop functioning properly or altogether'''
+'''intransitive: stop functioning properly or altogether'''
 {{top}}
 *Finnish: [[hajota]]
 *German: [[kaputtgehen]]
@@ -68,54 +89,24 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[gå sönder]]
 {{bottom}}
 
-'''interrupt or cease one's work or occupation temporarily'''
+'''intransitive: interrupt or cease one's work or occupation temporarily'''
 {{top}}
 {{mid}}
 *Swedish: [[avbryta]], [[bryta]]
 {{bottom}}
 
-<!--this sense needs to be verified before any translations are added
-'''tennis'''
--->
+'''intransitive: tennis'''
+{{top}}
+{{mid}}
+{{bottom}}
 
-'''billiards'''
+'''intransitive: billiards'''
 {{top}}
 {{mid}}
 *Swedish: [[spränga]]
 {{bottom}}
 
-====Transitive====
-#To [[cause]] to [[end up]] in two or more [[piece]]s.
-#: ''He '''broke''' the vase.''
-#(''medicine'') Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
-#:''He killed him by '''breaking''' his neck.''
-#(''medicine'') Of a bone, to [[fracture]] accidentially.
-#:''I broke my arm and now I have it in plaster.''
-#To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
-#:''Did you two '''break''' the trolley by racing with it?''
-#To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
-#:''You have to '''break''' an elephant before you can use it as an animal of burden.''
-#:'''''Breaking''' a man will make him obedient.''
-#To do that which is [[forbid]]den by (a rule or rules).
-#:''Stealing is breaking the law.''
-#(''gaming slang'') To [[design]] or make (a [[legal]] but [[unfair]] [[move]]).
-#: ''Letting white have three extra queens would '''break''' chess.''
-#(''media'') to [[disclose]] or [[make known]] an item of [[news]] etc
-
-=====Synonyms======
-*(''cause to end up in two or more pieces''): [[shatter]], [[smash]]
-*(''of a bone, intentionally''): [[crack]], [[fracture]]
-*(''of a bone, accidentially''): [[crack]], [[fracture]]
-*(''cause to malfunction or stop working altogether''): [[bust]]
-*(''cause a person or animal to lose his/her/its will''): [[subject]], [[tame]]
-*(''do that which is forbidden by''): [[contravene]], [[go against]], [[violate]]
-
-=====Antonyms=====
-*(''cause to end up in two or more pieces''): [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
-
-=====Translations=====
-
-'''cause to end up in two or more pieces'''
+'''transitive: cause to end up in two or more pieces'''
 {{top}}
 *Esperanto: [[rompi]]
 *Finnish: [[hajottaa]]
@@ -126,7 +117,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
 {{bottom}}
 
-'''of a bone, intentionally'''
+'''transitive: of a bone, intentionally'''
 {{top}}
 *French: [[casser]]
 *German: [[brechen]]
@@ -134,7 +125,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[bryta]]
 {{bottom}}
 
-'''of a bone, accidentially'''
+'''transitive: of a bone, accidentially'''
 {{top}}
 *French: [[se casser]]
 *German: [[brechen]]
@@ -142,28 +133,28 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Swedish: [[bryta]]
 {{bottom}}
 
-'''cause to malfunction'''
+'''transitive: cause to malfunction'''
 {{top}}
 *German: [[kaputtmachen]]
 {{mid}}
 *Swedish: [[ha sönder]], [[ta sönder]]
 {{bottom}}
 
-'''cause a person or animal to lose his/her/its will'''
+'''transitive: cause a person or animal to lose his/her/its will'''
 {{top}}
 *German: [[brechen]]
 {{mid}}
 *Swedish: [[bryta ned]]
 {{bottom}}
 
-'''do that which is forbidden by (a rule or rules)'''
+'''transitive: do that which is forbidden by (a rule or rules)'''
 {{top}}
 *German: [[brechen]]
 {{mid}}
 *Swedish: [[bryta]]
 {{bottom}}
 
-'''gaming slang: to design or make (a legal but unfair move)'''
+'''transitive: gaming slang: to design or make (a legal but unfair move)'''
 {{top}}
 {{mid}}
 {{bottom}}
@@ -183,19 +174,18 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Spanish: [[romper#Spanish|romper]]
 
 ===Noun===
-{{sb|break|breaks}}
+{{en-noun|break|breaks}}
 
-#An instance of breaking something into two pieces.
+#{{countable}} An instance of breaking something into two pieces.
 #:''The femur has a clean '''break''' and so should heal easily.''
-#A physical space that opens up in something or between two things.
+#{{countable}} A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
 #:''The sun came out in a '''break''' in the clouds.''
-#A [[rest]] or [[pause]], usually from [[work]].
+#{{countable}} A [[rest]] or [[pause]], usually from [[work]].
 #:''Let’s take a five-minute '''break'''.''
-#(''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
-#(''billiards'') The first [[shot]] in a game of [[billiards]]
-# Place where [[wave]]s break (ie. pitch or spill forward creating white water).
+#{{countable}} {{tennis}} (''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
+#{{countable}} {{billiards}} The first [[shot]] in a game of [[billiards]]
+#{{countable}} {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
 #: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
-[[Category:Surfing]]
 
 ====Synonyms====
 *(''instance of breaking something into two pieces''): [[split]]
@@ -266,7 +256,6 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *[[point break]]
 
 [[Category:English homophones]]
-[[Category:Tennis]]
 
 [[es:break]]
 [[gl:Break]]
