--- a/en/e/EEG.26244.wikitext
+++ b/en/e/EEG.26244.wikitext
@@ -5,4 +5,9 @@
 #[[electroencephalogram]]
 #[[electroencephalograph]]
 
+====Related terms====
+#[[electroencephalography]]
+
+[[Category:Medicine]]
+
 [[fi:EEG]]
