--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -10,7 +10,7 @@
 # a fraudulent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
 #:''That doctor is nothing but a lousy quack!''
 # a [[charlatan]].
-#:''What a quack he is saying that's an organic [[Viagra]]&#8482;!'' 
+#:''What a quack he is, saying that's an organic [[Viagra]]&#8482;!'' 
 # (''slang'') a [[doctor]].
 
 ==== Translations ====
