robot  Adding: io, nl Removing: en <maximum#707088>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -44,9 +44,12 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 *[[local maximum]]
 *[[global maximum]]
 *[[maximum limit]]
-*[[maximum heat]], slogan used by [[en:Tyco|Tyco]] RC
+*[[maximum heat]], slogan used by RC
 
 ===Related terms===
 *[[supremum]]
 
 [[Category:English irregular plurals]]
+
+[[io:Maximum]]
+[[nl:maximum]]
