--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -1,16 +1,16 @@
 ==Indonesian==
 ===Noun===
 '''bahasa'''
-
-#[[language]]
+====Translations====
+*English: [[language]]
 
 ----
 
 ==Malay==
 ===Noun===
 '''bahasa'''
-
-#[[language]]
+====Translations====
+*English: [[language]]
 
 [[de:bahasa]]
 [[et:Bahasa]]
