--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -71,7 +71,7 @@ from Northern [[French]]
 *'''Lower Sorbian''': [[karnikel]]
 *'''Macedonian''': [[питом заjак]] ([[pitom zajak]])
 *'''Maltese''': [[fenek]]
-*'''Norwegian''': [[kanin]]
+*'''Norwegian''': [[kanin]] ''m''
 *'''Occitan''': [[conilh]], [[lapin]]
 *'''Polish''': [[królik]]
 *'''Portuguese''': [[coelho]] ''m''
