--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -21,6 +21,7 @@
 *Indonesian: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 *Interlingua: [[quac]] (1)
 *Italian: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
+*Polish [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
 *Spanish: [[cuac]] (1); [[curandero]] ''m'' (2)
 
 === Adjective ===
